# MistubaVideo

./: Dockerfile  README.md  config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/assets/: __init__.py
src/assets/schema/: complete_schema.json
src/assets/schema/schemas/: features_schema.json  logging_schema.json  paths_schema.json  rendering_schema.json
src/assets/templates/: scene.xsd  scene_template.xml
src/assets/templates/report_templates/: timing_report_template.md
src/cli/: __init__.py  parameters.py
src/config/: __init__.py  config.py  constants.py
src/mitsuba/: camera.py  denoising.py  mitsuba.py  quality.py  render_settings.py
src/processing/: __init__.py  aov.py  ffmpeg.py  image.py  meshes.py  scene.py  xml.py
src/renderers/: __init__.py  base.py  multi.py
src/utils/: cache.py  common.py  environment.py  folder.py  logger.py  timing.py  zip.py
